Fix title spacing

--- a/components/Product/HeaderProduct/HeaderProduct.scss
+++ b/components/Product/HeaderProduct/HeaderProduct.scss
@@ -36,9 +36,9 @@
    &__title {
       position: relative;
       background-color: $background-honey;
-      padding: 15px 0;
+      padding: 1.5rem;
+      padding-right: 2.8rem;
       color: $font-marmol;
-      padding-left: 1.5rem;
       text-align: start;
 
       h6 {
